--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="currency">$</string>
     <string name="condition_value">Used (2nd hand)</string>
     <string name="btn_str">Change</string>
+    <string name="sub_cat">Sub Category</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
