empty list msg now in the main layout and not in a layout a parte

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="title">Title</string>
     <string name="title_std">Your Item Name</string>
     <string name="category">Category</string>
-    <string name="location">Turin Capital</string>
+    <string name="location">Location</string>
     <string name="price">Price</string>
     <string name="price_val_std">0.99</string>
     <string name="expire_date">20/04/2020</string>
