--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
+
     // menu strings
     <string name="action_settings">Settings</string>
     <string name="save_edit">Save</string>
@@ -14,6 +15,9 @@
     <string name="menu_slideshow">Slideshow</string>
 
     <string name="home_second">Home Second</string>
+    <string name="new_ad">Create New Ad</string>
+    <string name="items">My Items</string>
+    <string name="profile">My Profile</string>
 
     //item strings
     <string name="title">Title</string>
@@ -46,6 +50,8 @@
     <string name="username_header">Username:</string>
     <string name="email_header">Email:</string>
     <string name="location_header">Location:</string>
+
+    <string name="edit">Edit</string>
 
     <string name="emptylist">Ooops! Looks like you don\'t have any items.</string>
 
