logout function in showprofile - from ... menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
     <string name="location_header">Location:</string>
 
     <string name="edit">Edit</string>
+    <string name="logout">Logout</string>
 
     <string name="emptylist">Ooops! Looks like you don\'t have any items.</string>
 
