--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,7 @@
     <string name="btn_str">Change</string>
     <string name="sub_cat">Sub Category</string>
     <string name="seller">Sold by: </string>
-    <string name="status">status: </string>
+    <string name="status">Available</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
