--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="sub_cat">Sub Category</string>
     <string name="seller">Sold by: </string>
     <string name="status">Available</string>
+    <string name="status_header">Status:</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
