first steps locations

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,6 @@
     <string name="emptylist">Ooops! Looks like you don\'t have any items.</string>
     <string name="emptyfavlist">You do not have favorite items. Go explore!</string>
 
+    <string name="permission_rationale">Location permission is needed for core functionality</string>
+
 </resources>
